# goatcounter-mcp-server

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  smithery.yaml
.github/workflows/: pypi_deploy.yaml
src/goatcounter_mcp_server/: __init__.py  api_client.py  main.py  server.py
